--- a/client/src/shared/image-upload/image-upload.html
+++ b/client/src/shared/image-upload/image-upload.html
@@ -1,5 +1,5 @@
-<div class="flex w-full gap-6 min-h-100">
-  <div class="flex items-center gap-4 w-2/3">
+<div class="flex w-full gap-6">
+  <div class="flex items-center gap-4 w-40 h-40">
     <label
       (dragover)="onDragOver($event)"
       (dragleave)="onDragLeave($event)"
